# llm-comparator-pub

./: .env.demo.example  .env.example  .gitignore  README.md  main.py  pyproject.toml
.do/: app-demo.yaml  app.yaml  deploy.template.yaml
app/: config.py  main.py
app/models/: database.py  orm.py  schemas.py
app/repositories/: analysis_repository.py  run_repository.py
app/routers/: analyze.py  health.py  runs.py
app/services/: jsonl.py  llm_client.py  scoring.py
examples/: 1_prompts_only_10.jsonl  1_prompts_only_100.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: example.jsonl
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/pages/: AnalyzePage.tsx  PromptPage.tsx
tests/: conftest.py  test_analyze.py  test_health.py  test_jsonl.py  test_runs.py  test_scoring.py
